--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -11,13 +11,28 @@ h1 {
 }
 
 p {
+    font-family: 'Mitr', sans-serif;
+}
+
+.index_content p {
     margin-left: 15%;
     margin-right: 15%;
-    font-family: 'Mitr', sans-serif;
     text-align: justify;
     text-indent: 2em;
 }
 
+.about_me_content {
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+.about_me_content p {
+    margin-left: 7%;
+    text-align: justify;
+}
 
 /* Navigation */
 .navigation {
@@ -65,6 +80,7 @@ footer {
     text-align: center;
     display: flex;
     justify-content: center;
+    margin-top: 25px;
 }
 
 footer a {
@@ -110,4 +126,10 @@ footer a {
 .boxshadow {
     position: relative;
     box-shadow: 2px 3px 5px rgba(0, 0, 0, .5);
+}
+
+
+.about_me_content img {
+    width: 30%;
+    height: 30%;
 }
