--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@ body {
 
 h1 {
     margin-left: 20%;
-    margin-top: 40px;
     font-size: 3em;
     font-family: 'Grand Hotel', cursive;
 }
@@ -16,15 +15,20 @@ p {
 
 .index_content p {
     margin-left: 15%;
-    margin-right: 15%;
     text-align: justify;
     text-indent: 2em;
+}
+
+.index_content div{
+    display: flex;
+    margin-right: 15%;
+    margin-left: 10%;
 }
 
 .about_me_content {
     display: flex;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 5px;
     margin-left: 15%;
     margin-right: 15%;
 }
