--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,13 @@ p {
     margin-top: 5%;
 }
 
+.intro {
+    padding: 10px;
+    margin-right: 30px;
+    border-radius: 30px;
+    background-image: linear-gradient(to right, #A68884, #E3E2E2)
+}
+
 @media screen and (max-width: 768px) {
     .index-content {
         display: flex;
