Added medium logo and updated job title

--- a/css/styles.css
+++ b/css/styles.css
@@ -242,6 +242,14 @@ footer div {
     color: #333;
 }
 
+.fa-medium-m {
+    color: #3cb371;
+}
+
+.fa-square {
+    color: white;
+}
+
 /* Images */
 
 .header img {
