Complete overhaul... because obviously.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,298 +1,7 @@
-/* General */
-body {
-    background-color: #E3E2E2;
+html,body,h1,h3,h4,h5,h6 {
+    font-family: 'Solway', serif !important;
 }
 
-h1 {
-    margin-left: 20%;
-    font-size: 3.5em;
-    margin-top: 0% !important;
-    font-family: 'Oleo Script Swash Caps', cursive;
-}
-
-@media screen and (max-width: 768px) {
-    h1 {
-        margin-left: 10%;
-    }
-}
-
-p {
-    font-family: 'Bree Serif', serif;
-    font-weight: 100;
-    font-size: 1.2em;
-}
-
-.index-content {
-    display: flex;
-    margin-right: 15%;
-    margin-left: 10%;
-}
-
-.index-content p {
-    margin-left: 10%;
-    margin-right: 10%;
-    text-align: justify;
-    text-indent: 2em;
-}
-
-.index-content .index-welcome {
-    width: 66%;
-}
-
-.index-content .index-twitter {
-    width: 33%;
-    margin-top: 5%;
-}
-
-.intro {
-    padding: 10px;
-    margin-right: 30px;
-    border-radius: 30px;
-    background-image: linear-gradient(to right, #A68884, #E3E2E2)
-}
-
-@media screen and (max-width: 768px) {
-    .index-content {
-        display: flex;
-        flex-direction: column;
-        margin-left: 0px;
-        margin-right: 0px;
-    }
-
-    .index-content p {
-        text-align: justify;
-        text-indent: 2em;
-    }
-
-    .index-content .index-welcome {
-        width: 100%;
-    }
-    
-    .index-content .index-twitter {
-        width: 100%;
-        margin-top: 5%;
-        display: flex;
-        justify-content: center;
-    }
-
-    .index-welcome p {
-        margin-left: 5%;
-        margin-right: 5%;
-    }
-
-    .index-welcome .welcome-paragraph {
-        margin-bottom: auto;
-    }
-}
-
-.about_me_content {
-    display: flex;
-    align-items: center;
-    margin-top: 5px;
-    margin-left: 15%;
-    margin-right: 15%;
-}
-
-.about_me_content p {
-    margin-left: 7%;
-    text-align: justify;
-}
-
-@media screen and (max-width: 768px) {
-    .about_me_content {
-        flex-direction: column;
-        margin-left: 0px;
-        margin-right: 0px; 
-    }
-
-    .about_me_content p {
-        margin-left: 5%;
-        margin-right: 5%;
-        text-align: justify;
-    }
-} 
-
-
-/* Navigation */
-
-/* General Navigation */
-.topnav {
-    overflow: hidden;
-    background-color: #A68884;
-    margin-top: 15px;
-    font-family: 'Mitr', sans-serif;
-  }
-  
-  .topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  .topnav a:hover {
-    background-color: #774D4B;
-    color: #f2f2f2;
-  }
-  
-  .topnav .icon {
-    display: none;
-  }
-
-  /* Non-Mobile Navigation */
-  @media screen and (min-width: 769px) {
-      .topnav {
-          margin-left: auto;
-          margin-right: auto;
-          width: 75%;
-          display: flex;
-          /* justify-content: center; */
-      }
-
-      .topnav a {
-          flex-grow: 1;
-      }
-
-      .active {
-        background-color: #774D4B;
-        color: #f2f2f2;
-      }
-  }
-  
-  /* Mobile-Friendly Navigation */
-  @media screen and (max-width: 768px) {
-    .topnav a:not(.active) {
-        display: none;
-    }
-
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-    
-    .topnav.responsive {
-        position: relative;
-    }
-
-    .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-  }
-
-/* Footer */
-
-footer {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    margin-top: 25px;
-    width: 30%;
-    margin-left: 35%;
-    margin-right: 35%;
-}
-
-footer a {
-    text-decoration: none;
-}
-
-footer div {
-    flex-grow: 1;
-}
-
-/* Social Media Icons */
-
-.fa-twitter-square {
-    color: #00ACED;
-}
-
-.twitch-logo a span {
-    width: 56px;
-    height: 56px;
-}
-
-.fa-twitch {
-    color: #ffffff;
-    background-color: #6441A4;
-    border-radius: 5px;
-    height: 56px;
-    margin-top: 6px;
-    vertical-align: center;
-}
-
-.fa-facebook-square {
-    color: #3B5998;
-}
-
-.fa-linkedin-square {
-    color: #0077B5;
-}
-
-.fa-github-square {
-    color: #333;
-}
-
-.fa-medium-m {
-    color: #3cb371;
-}
-
-.fa-square {
-    color: white;
-}
-
-/* Images */
-
-.header img {
-    width: 50%;
-    height: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-@media screen and (max-width: 768px) {
-    .header img {
-        width: 100%;
-    }
-}
-
-.boxshadow {
-    position: relative;
-    box-shadow: 2px 3px 5px rgba(0, 0, 0, .5);
-}
-
-
-.about_me_content img {
-    width: 30%;
-    height: 30%;
-}
-
-@media screen and (max-width: 768px) {
-    .about_me_content img {
-        width: 60%;
-        height: 60%;
-    }
-}
-
-/* Mobile */
-
-@media screen and (max-width: 316px) {
-    footer {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .fa-facebook-square {
-        margin-top: 6px;
-    }    
+h2 {
+    font-family: 'Lobster Two', cursive !important;
 }
